--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,153 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+
+
+:root {
+    --vertical-spacing: 2rem;
+    --horizontal-space: 3rem;
+    --bg-color: #96B2FF;
+    --body-color: #be9b41;
+    --heading-color: #F7B819;
+    --link-color: #FB8201;
+    --link-under-color:#BF2604;
+    --link-hover-color:#A6033F;
+}
+
+a {
+    color:var(--link-color);
+    text-decoration-color: var(--link-under-color);
+}
+
+a:hover{
+    color: var(--link-hover-color);
+}
+
+body {
     padding-left: 4em;
     font-size: 18px;
+    font-family: 'Times New Roman', Times, serif;
     line-height: 1.5;
+    width: auto;
+    /*background-image: */
+    /*repeating-linear-gradient(90deg, hsla(196,0%,79%,0.06) 0px, hsla(196,0%,79%,0.06) 1px,transparent 1px, transparent 96px),
+    repeating-linear-gradient(0deg, hsla(196,0%,79%,0.06) 0px, hsla(196,0%,79%,0.06) 1px,transparent 1px, transparent 96px),
+    repeating-linear-gradient(0deg, hsla(196,0%,79%,0.09) 0px, hsla(196,0%,79%,0.09) 1px,transparent 1px, transparent 12px),
+    repeating-linear-gradient(90deg, hsla(196,0%,79%,0.09) 0px, hsla(196,0%,79%,0.09) 1px,transparent 1px, transparent 12px),
+    linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));*/
+    background-image: 
+    radial-gradient(circle at 17% 77%, rgba(17, 17, 17,0.04) 0%, rgba(17, 17, 17,0.04) 50%,rgba(197, 197, 197,0.04) 50%, rgba(197, 197, 197,0.04) 100%),
+    radial-gradient(circle at 26% 17%, rgba(64, 64, 64,0.04) 0%, rgba(64, 64, 64,0.04) 50%,rgba(244, 244, 244,0.04) 50%, rgba(244, 244, 244,0.04) 100%),
+    radial-gradient(circle at 44% 60%, rgba(177, 177, 177,0.04) 0%, rgba(177, 177, 177,0.04) 50%,rgba(187, 187, 187,0.04) 50%, rgba(187, 187, 187,0.04) 100%),
+    linear-gradient(19deg, rgb(28, 117, 250),rgb(34, 2, 159));
+    color: var(--body-color);
 }
 
-#about img{
-    height: 15em;
+body > * {
+    padding-left: var(--horizontal-space);
+    padding-right: var(--horizontal-space);
 }
 
-#portfolio img{
-    height: 25em;
+#about h1, #about h2, #portfolio h1, #portfolio h2{
+    font-family: 'Arvo', serif;
+}
+
+#about img {
+    height: 8em;
+}
+
+body#portfolio ul#portfolioItems {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    list-style-type: none;
+}
+
+body#portfolio ul#portfolioItems li{
+    flex-basis: 48%;
+    padding-right: 2%;
+}
+
+body#portfolio ul#portfolioItems li img{
+    max-width: 100%;
 }
 
 p{
     max-width: 50em;
+    font-family: "Roboto" serif;
 }
 
 h1, h2, h3{
     line-height: 1.2;
+    color: var(--heading-color);
 }
+
+body{
+    display: grid;
+    grid-template-areas: "head head"
+                         "nav nav"
+                         "main main"
+                         "foot foot";
+    grid-template-columns: auto 4fr;
+    grid-template-rows: auto auto 1fr auto;
+}
+
+body > header{
+    grid-area: head;
+}
+
+body > nav{
+    grid-area: nav;
+}
+
+body > nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+body > main{
+    grid-area: main;
+}
+
+body > footer{
+    grid-area: foot;
+}
+
+header, footer{
+    padding-top: var(--vertical-spacing);
+    padding-bottom: var(--horizontal-space);
+}
+
+header h1, footer h1{
+    margin: 0;
+}
+
+div {
+    padding-left: 3rem;
+}
+
+#buttonPad {
+    padding-left: 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: sticky;
+    top: 50px;
+}
+
+button {
+    background-color: gold;
+    border-radius: 0.5em;
+    color: var(--link-color);
+    padding: 5px;
+    margin: 10px 0px;
+}
+
+@media screen and (min-width: 25em){
+    body {
+        display: grid;
+        grid-template-areas: "head head"
+                         "nav main"
+                         "foot foot";
+        grid-template-columns: auto 4fr;
+        grid-template-rows: auto 1fr auto;
+    }
+} 
